user-reading: add api, getting one user reading full info
